# directcapture

./: CMakeLists.txt  README.md  vs.sln
dircapdll/: main.cpp  wavefile.hpp
directcapture/: directcapture.vcxproj  directcapture.vcxproj.filters  main.cpp  wavefile.cpp
dllinject/: dllinject.vcxproj  dllinject.vcxproj.filters  main.cpp  unicodecvt.cpp  unicodecvt.hpp
extlib/mlib.1.1/mlib/: platform.hpp
extlib/mlib.1.1/mlib/unicode/: unicodecvt.cpp  unicodecvt.hpp
